# HomeIot

./: .gitignore  .importlinter  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  ty.toml
device/: .env.sample  main.py  pyproject.toml
device/raspi-zero2/: .env.sample  pyproject.toml
device/raspi-zero2/src/homeiot_device_raspi/: main.py
device/raspi-zero2/tests/: test_main.py
docs/: BATCH_USAGE.md  device.md  observability.md  server.md  vps-setup.md
docs/codex/: ENERGY_ARCHIVE_PIPELINE_OVERVIEW.md
server/: .env.sample  docker-compose.yml  mosquitto.conf
server/analysis/notebooks/: home_energy_review.py
server/app/: Dockerfile  app.py
server/batch/: Dockerfile  pyproject.toml
server/batch/src/homeiot_batch/: __init__.py  config.py  dev_seed.py  duckdb_writer.py  influx_reader.py  parquet_writer.py  run_archive.py  transform.py
server/cloudflare/: config.yml
server/config/alloy/: alloy.hcl
server/config/loki/: loki.yaml
server/config/mosquitto/: aclfile  mosquitto.conf
server/config/mosquitto/certs/: README.md
server/config/prometheus/: prometheus.yml
server/grafana/: README.md
server/grafana/dashboards/: home_energy_daily.json  home_energy_realtime.json  infra_logs.json  node_exporter_overview.json
server/grafana/provisioning/dashboards/: dashboards.yml
server/grafana/provisioning/datasources/: datasources.yml
server/mqtt_gateway/: Dockerfile  pyproject.toml
server/mqtt_gateway/src/homeiot_mqtt_gateway/: main.py
