[project]
name = "home-iot-device"
version = "0.1.0"
description = "Raspberry Pi side scripts for the Home IoT project"
requires-python = ">=3.13"
dependencies = [
    "momonga>=0.2.0",
    "python-dotenv>=1.2.1",
    "paho-mqtt>=2.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
