[project]
name = "homeiot-batch"
version = "0.1.0"
description = "InfluxDB から DuckDB へ日次でアーカイブするバッチ"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.1.3",
    "influxdb==5.3.2",
    "pyarrow>=17.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
